# concrete-class

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  concrete-class.cpp
tests/: hello.cc
